[gd_scene load_steps=4 format=3 uid="uid://d7e8f9g0h1i2j"]

[ext_resource type="Script" path="res://scripts/Snake.gd" id="1_snake"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_head"]
size = Vector2(20, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_detect"]
radius = 10.0

[node name="Snake" type="CharacterBody2D"]
script = ExtResource("1_snake")

[node name="HeadSprite" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(0, 1, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_head")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_detect")

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]